# jsonrpc2

./: .gitignore  LICENSE  README.md  jsonrpc2.cabal  stack.yaml
src/Network/: JsonRpc2.hs
src/Network/JsonRpc2/: Base.hs  Types.hs
