name:                jsonrpc2
version:             0.0.0.1
synopsis:            Lightweight JSON-RPC 2 implementation
-- description:
homepage:            https://github.com/esmolanka/jsonrpc2#readme
license:             BSD3
license-file:        LICENSE
author:              Eugene Smolanka
maintainer:          esmolanka@gmail.com
copyright:           Eugene Smolanka
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
    -fno-warn-unused-do-bind

  exposed-modules:
    Network.JsonRpc2
    Network.JsonRpc2.Base
    Network.JsonRpc2.Types

  build-depends:
    base >= 4.7 && < 5,
    containers,
    mtl,
    aeson,
    attoparsec,
    text,
    bytestring,
    io-streams

  default-language:  Haskell2010
